--- a/src/app/modules/settings-v2/account/email-address/email-address.component.html
+++ b/src/app/modules/settings-v2/account/email-address/email-address.component.html
@@ -33,7 +33,7 @@
     <m-shadowboxSubmitButton
       [disabled]="!canSubmit()"
       [saving]="inProgress"
-      (click)="update()"
+      (click)="save()"
     >
       Save Email Address
     </m-shadowboxSubmitButton>
