--- a/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
+++ b/src/app/modules/settings-v2/account/nsfw-content/nsfw-content.component.html
@@ -12,7 +12,7 @@
     <m-shadowboxSubmitButton
       [disabled]="!canSubmit()"
       [saving]="inProgress"
-      (click)="update()"
+      (click)="submit()"
     >
       Update NSFW Preference
     </m-shadowboxSubmitButton>
