--- a/src/app/modules/settings-v2/account/password/password.component.html
+++ b/src/app/modules/settings-v2/account/password/password.component.html
@@ -100,7 +100,7 @@
     <m-shadowboxSubmitButton
       [disabled]="!canSubmit()"
       [saving]="inProgress"
-      (click)="update()"
+      (click)="submit()"
     >
       Update Password
     </m-shadowboxSubmitButton>
