--- a/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
+++ b/src/app/modules/settings-v2/account/toaster-notifications/toaster-notifications.component.html
@@ -15,7 +15,7 @@
     <m-shadowboxSubmitButton
       [disabled]="!canSubmit()"
       [saving]="inProgress"
-      (click)="update()"
+      (click)="submit()"
     >
       Update Toaster Preference
     </m-shadowboxSubmitButton>
