remove redundant 'field required' errors bc user can't submit an empty form anyway

--- a/src/app/common/components/forms/checkbox/checkbox.component.scss
+++ b/src/app/common/components/forms/checkbox/checkbox.component.scss
@@ -12,6 +12,10 @@ m-formInput__checkbox {
   }
   font-size: 13px;
 
+  .m-formInputCheckbox__visibleWrapper {
+    display: flex;
+    align-items: center;
+  }
   .m-formInputCheckbox__custom {
     display: inline-block;
     vertical-align: middle;
