--- a/src/app/common/components/forms/checkbox/checkbox.component.html
+++ b/src/app/common/components/forms/checkbox/checkbox.component.html
@@ -5,6 +5,8 @@
     (ngModelChange)="updateValue($event)"
     [id]="id"
   />
-  <span class="m-formInputCheckbox__custom"></span>
-  <ng-content></ng-content>
+  <div class="m-formInputCheckbox__visibleWrapper">
+    <span class="m-formInputCheckbox__custom"></span>
+    <span><ng-content></ng-content></span>
+  </div>
 </label>
