--- a/src/app/modules/newsfeed/feeds/search.component.scss
+++ b/src/app/modules/newsfeed/feeds/search.component.scss
@@ -6,7 +6,7 @@
   padding: 12px;
   margin-bottom: 16px;
   @include m-theme() {
-    background-color: themed($m-white);
+    background-color: themed($m-bgColor--secondary);
   }
 
   m-sort-selector {
