--- a/src/app/modules/settings/settings.component.scss
+++ b/src/app/modules/settings/settings.component.scss
@@ -25,7 +25,7 @@ m-settings {
   margin-bottom: 8px;
   padding: 16px;
   @include m-theme() {
-    background-color: themed($m-white);
+    background-color: themed($m-bgColor--secondary);
   }
 
   h4 {
