--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -113,8 +113,8 @@ m-app {
     font-size: 13px;
 
     @include m-theme() {
-      background-color: themed($m-white);
-      border: 1px solid themed($m-grey-50);
+      background-color: themed($m-bgColor--secondary);
+      border: 1px solid themed($m-borderColor--tertiary);
     }
 
     &.m-page--sidebar--navigation--item-active {
