--- a/src/app/common/components/card/card.component.scss
+++ b/src/app/common/components/card/card.component.scss
@@ -1,6 +1,6 @@
 minds-card {
   display: block;
   @include m-theme() {
-    background-color: themed($m-white);
+    background-color: themed($m-bgColor--secondary);
   }
 }
