--- a/src/app/common/components/dropdown/dropdown.component.scss
+++ b/src/app/common/components/dropdown/dropdown.component.scss
@@ -88,8 +88,8 @@
       box-shadow: 0 2px 2px 0 rgba(themed($m-black), 0.14),
         0 3px 1px -2px rgba(themed($m-black), 0.2),
         0 1px 5px 0 rgba(themed($m-black), 0.12);
-      background-color: themed($m-white);
-      border: 1px solid themed($m-grey-50);
+      background-color: themed($m-bgColor--secondary);
+      border: 1px solid themed($m-borderColor--primary);
     }
 
     .m-dropdown--list--item,
