--- a/src/app/common/components/footer/footer.component.scss
+++ b/src/app/common/components/footer/footer.component.scss
@@ -1,8 +1,8 @@
 .m-footer {
   text-align: center;
   @include m-theme() {
-    background-color: themed($m-white);
-    border: 1px solid themed($m-grey-50);
+    background-color: themed($m-bgColor--secondary);
+    border: 1px solid themed($m-borderColor--primary);
   }
 
   img {
