--- a/src/app/modules/comments/list/list.component.scss
+++ b/src/app/modules/comments/list/list.component.scss
@@ -257,7 +257,7 @@ m-comments__entityOutlet,
     padding: $minds-padding ($minds-padding + 88px) $minds-padding
       $minds-padding * 2;
     @include m-theme() {
-      background-color: themed($m-white);
+      background-color: themed($m-bgColor--secondary);
     }
   }
 
