--- a/src/app/modules/wallet/tokens/contributions/overview.component.scss
+++ b/src/app/modules/wallet/tokens/contributions/overview.component.scss
@@ -2,7 +2,7 @@
   padding: 16px;
   margin-bottom: 8px;
   @include m-theme() {
-    background-color: themed($m-white);
+    background-color: themed($m-bgColor--secondary);
   }
 
   .m-token-contributions--overview--columns {
