--- a/src/app/modules/wallet/tokens/onboarding/onboarding.component.scss
+++ b/src/app/modules/wallet/tokens/onboarding/onboarding.component.scss
@@ -11,7 +11,7 @@
     flex-direction: row;
     margin-bottom: 16px;
     @include m-theme() {
-      background-color: themed($m-white);
+      background-color: themed($m-bgColor--secondary);
     }
 
     h2 {
