--- a/src/app/modules/wallet/tokens/referrals/referrals.component.scss
+++ b/src/app/modules/wallet/tokens/referrals/referrals.component.scss
@@ -4,7 +4,7 @@ m-referrals {
   section {
     margin-bottom: $minds-padding * 2;
     @include m-theme() {
-      background-color: themed($m-white);
+      background-color: themed($m-bgColor--secondary);
     }
 
     &:not(:last-of-type) {
