--- a/src/app/modules/wallet/tokens/transactions/transactions.component.scss
+++ b/src/app/modules/wallet/tokens/transactions/transactions.component.scss
@@ -17,7 +17,7 @@
     padding: 16px;
     margin-bottom: 8px;
     @include m-theme() {
-      background-color: themed($m-white);
+      background-color: themed($m-bgColor--secondary);
     }
 
     .m-token--ledger--reward-amount {
@@ -133,7 +133,7 @@
   margin-bottom: 8px;
   flex-wrap: wrap;
   @include m-theme() {
-    background-color: themed($m-white);
+    background-color: themed($m-bgColor--secondary);
   }
 
   @media screen and (max-width: $min-tablet) {
