--- a/src/app/modules/wallet/usd/balance.component.scss
+++ b/src/app/modules/wallet/usd/balance.component.scss
@@ -3,7 +3,7 @@
   margin-bottom: $minds-margin * 2;
 
   @include m-theme() {
-    background-color: themed($m-white);
+    background-color: themed($m-bgColor--secondary);
   }
   label {
     font-weight: 600;
