(fix): search bar issues with new nav

--- a/src/app/modules/search/bar.component.html
+++ b/src/app/modules/search/bar.component.html
@@ -1,4 +1,4 @@
-<div class="mdl-textfield mdl-js-textfield">
+<div class="mdl-textfield mdl-js-textfield" [mdl]>
   <i class="material-icons m-searchBar__searchIcon" (click)="setFocus()"
     >search</i
   >
