--- a/src/app/common/layout/v3-topbar/v3-topbar.component.scss
+++ b/src/app/common/layout/v3-topbar/v3-topbar.component.scss
@@ -21,6 +21,7 @@
 }
 
 .m-v3Topbar__middleColumn {
+  width: $layoutMainFullWidth;
 }
 
 .m-v3Topbar__middleColumn,
@@ -112,18 +113,25 @@
 
   .m-v3Topbar__searchBox {
     height: 100%;
+    width: 100%;
 
     m-search--bar {
       display: block;
-      padding: 0 24px;
+      padding: 0;
       width: 100%;
       height: 100%;
+
+      &.m-search__bar--active {
+        @include m-theme() {
+          border-right: 1px solid themed($m-borderColor--primary);
+        }
+      }
 
       > .mdl-textfield {
         display: inline-flex;
         flex-direction: row;
         align-items: center;
-        padding: 0;
+        padding: 0 24px;
         height: 100%;
 
         @media screen and(max-width: $m-grid-max-mobile) {
@@ -156,15 +164,17 @@
       }
 
       .m-search-bar-suggestions-list {
-        left: auto;
+        left: 0;
         right: 0;
         top: 75px;
         width: 100%;
-        border-radius: 4px;
+        border-radius: 0;
+        border: 0;
+        box-sizing: content-box;
         @include m-theme() {
-          box-shadow: 0 3px 4px 0 rgba(themed($m-black), 0.14),
-            0 3px 3px -2px rgba(themed($m-black), 0.2),
-            0 1px 8px 0 rgba(themed($m-black), 0.12);
+          box-shadow: none;
+          border-bottom: 1px solid themed($m-borderColor--primary);
+          border-right: 1px solid themed($m-borderColor--primary);
         }
       }
     }
