--- a/src/app/modules/analytics/v2/dashboard.component.scss
+++ b/src/app/modules/analytics/v2/dashboard.component.scss
@@ -2,6 +2,9 @@ m-analytics__dashboard {
   display: block;
   position: relative;
   width: 100%;
+  @include m-theme() {
+    background-color: themed($m-bgColor--secondary);
+  }
 }
 
 .m-analytics__spinnerContainer {
