(fix): analytics and pro settings backgrounds

--- a/src/app/common/components/page-layout/page-layout.component.scss
+++ b/src/app/common/components/page-layout/page-layout.component.scss
@@ -7,7 +7,7 @@ m-pageLayout {
   min-height: 100%;
   padding: 56px 0 48px 0;
   @include m-theme() {
-    background-color: themed($m-bgColor--secondary);
+    background-color: themed($m-bgColor--primary);
     color: themed($m-textColor--primary);
   }
   &.isForm {
@@ -46,7 +46,7 @@ m-sidebarMenu {
   margin-right: 24px;
 
   @include m-theme() {
-    background-color: themed($m-bgColor--secondary);
+    background-color: themed($m-bgColor--primary);
     color: themed($m-textColor--primary);
   }
 }
