--- a/src/app/modules/pro/settings/settings.component.scss
+++ b/src/app/modules/pro/settings/settings.component.scss
@@ -1,7 +1,7 @@
 m-proSettings {
   display: block;
   @include m-theme() {
-    background-color: themed($m-bgColor--secondary);
+    background-color: themed($m-bgColor--primary);
   }
   form {
     margin: 0;
