(fix): upgrade link works on new nav

--- a/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
+++ b/src/app/common/layout/v3-topbar/user-menu/user-menu.component.html
@@ -30,7 +30,7 @@
       *ngIf="getCurrentUser()"
       (click)="closeMenu()"
     >
-      <a>
+      <a routerLink="/upgrades">
         Upgrade
       </a>
     </li>
