(chore): bring back notification tabs and scroll for new nav

--- a/src/app/modules/notifications/flyout.component.html
+++ b/src/app/modules/notifications/flyout.component.html
@@ -9,9 +9,9 @@
       [hidden]="!visible"
       [visible]="visible"
       [useOwnScrollSource]="true"
-      [showTabs]="!newNavigation"
+      [showTabs]="true"
       [showShadows]="!newNavigation"
-      [showInfiniteScroll]="!newNavigation"
+      [showInfiniteScroll]="true"
       [showElapsedTime]="newNavigation"
       limit="12"
     ></minds-notifications>
