--- a/src/app/modules/newsfeed/newsfeed.component.scss
+++ b/src/app/modules/newsfeed/newsfeed.component.scss
@@ -205,6 +205,9 @@ m-newsfeed {
       padding: 0;
     }
   }
+  .m-pageLayout__pane--right {
+    padding-right: 0;
+  }
   .m-newsfeed__sidebar {
     max-width: initial;
   }
