minor style fixes

--- a/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.scss
+++ b/src/app/modules/wallet/v2/tokens/settings/settings-tokens.component.scss
@@ -36,6 +36,7 @@ m-walletSettings--tokens {
         }
       }
       p {
+        line-height: 19px;
         @include m-theme() {
           color: themed($m-textColor--primary);
         }
