--- a/src/app/modules/settings-v2/settings-v2.component.scss
+++ b/src/app/modules/settings-v2/settings-v2.component.scss
@@ -153,7 +153,7 @@ m-settingsV2 {
       }
     }
 
-    m-popover {
+    .m-formWrapper m-popover {
       width: 100%;
       .m-popover__content {
         margin-top: 1.5rem;
