(test) test commit

--- a/src/app/modules/report/console/console.component.html
+++ b/src/app/modules/report/console/console.component.html
@@ -4,7 +4,7 @@
     class="mdl-tabs__tab"
     [ngClass]="{ 'is-active': filter == 'review' }"
     i18n="@@M__COMMON__REVIEW_PENDING"
-    >Review Pending</a
+    >Pending Review</a
   >
   <a
     (click)="setFilter('pending')"
