(chore): change dark mode to match that of secondary bg color for

--- a/src/stylesheets/themes.scss
+++ b/src/stylesheets/themes.scss
@@ -196,7 +196,7 @@ $themes: (
     m-blue-grey-50: lighten($blue-grey-950, $percent),
     m-black: $white,
     m-black-always: $black,
-    m-white: lighten($grey-990, $percent),
+    m-white: #202527,
     m-white-always: $white,
     m-body-bg: lighten(#080808, $percent),
     m-marketing-bg-gradient-start: #292827,
